# IkeaDiffusion

./: .gitignore  LICENSE  finetune.py  ikea_dataset.py  pyproject.toml  scrapy.cfg
ikeascraper/: items.py  middlewares.py  pipelines.py  settings.py
ikeascraper/spiders/: ikea.py
