[project]
name = "ikeadiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "diffusers>=0.33.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "scrapy>=2.12.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
